<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText"
        android:layout_width="173dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nueva_asignatura"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/RecyclerView_subjects"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_appName"
        app:layout_constraintVertical_bias="0.157" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_subjects"
        android:layout_width="348dp"
        android:layout_height="405dp"
        android:layout_marginTop="248dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/liner_layout"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:onClick="subject_clicked"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/RecyclerView_subjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/subjectName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/asignatura"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subjectScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/nota"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/subjectMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/maxNota"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="303dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:onClick="addSubject_Click"
        android:text="@string/añadir"
        app:layout_constraintBottom_toTopOf="@+id/RecyclerView_subjects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_appName"
        app:layout_constraintVertical_bias="0.279" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>